[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/laser/glowing_circle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/laser/laser.gd" type="Script" id=2]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/4 = true
glow_intensity = 0.5
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[sub_resource type="CircleShape2D" id=2]

[node name="RayCast2D" type="RayCast2D"]
position = Vector2( 96, 32 )
enabled = true
cast_to = Vector2( 0, 0 )
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.5, 3, 6, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2D" type="CPUParticles2D" parent="."]
lifetime = 0.3
texture = ExtResource( 1 )
initial_velocity = 120.0

[node name="CollisionParticles2D" type="CPUParticles2D" parent="."]
lifetime = 0.3
texture = ExtResource( 1 )
initial_velocity = 250.0

[node name="BeamParticles2D" type="CPUParticles2D" parent="."]
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
tangential_accel = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 416, 10 )
scale = Vector2( 1, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -32, 0.22 )
shape = SubResource( 2 )
